# linux-agent

./: .gitignore  .gitmodules  BUILDING  CMakeLists.txt  README.md  STANDARDS.md  TODO.txt  build-deps  dattocli.in  dattonet.in  dm_cow_down.sh  dm_cow_down_chroot.sh  dm_cow_up_chroot.sh  install_deps  messages  one_step_build  run_tests  setup.py.in
client/: CMakeLists.txt  FEATURE-TODO.txt  Makefile  README  TODO.txt  buildtree.c  dattod  dattod.c  dattod.h  device_tracer_manager.h  do_build  fetch_testing_tools  install_deps  make_packages  messages  one_step_build  run_tests  trace.c  trace.h  tracecontroller.c  tracecontroller.h  tracetable.c  tracetable.h  until_failure
client/backup/: backup.cc  backup.h  backup_builder.cc  backup_builder.h  backup_coordinator.cc  backup_coordinator.h  backup_event_handler.cc  backup_event_handler.h  backup_manager.cc  backup_manager.h  backup_runner.cc  backup_runner.h  backup_runner_tracker.cc  backup_runner_tracker.h  full_backup.cc  full_backup.h  in_progress_device_set.cc  in_progress_device_set.h  in_progress_path_list.cc  in_progress_path_list.h  in_progress_path_set.cc  in_progress_path_set.h  incremental_backup.cc  incremental_backup.h
client/backup_event_tracker/: backup_event_handler.cc  backup_event_handler.h  backup_event_tracker.cc  backup_event_tracker.h
client/backup_status_tracker/: backup_event_handler.cc  backup_event_handler.h  backup_status_tracker.cc  backup_status_tracker.h  sync_count_handler.cc  sync_count_handler.h
client/block_device/: block_device.cc  block_device.h  block_device_exception.h  block_device_factory.cc  block_device_factory.h  ext_error_table-inl.h  ext_file_system.cc  ext_file_system.h  ext_mountable_block_device.cc  ext_mountable_block_device.h  mountable_block_device.cc  mountable_block_device.h  nbd_block_device.cc  nbd_client.cc  nbd_client.h  nbd_exception.h  nbd_server.cc  nbd_server.h  remote_block_device.h  remote_block_device_exception.h  tools.h  xfs_mountable_block_device.cc  xfs_mountable_block_device.h
client/block_trace/: block_trace_exception.h  cpu_tracer.cc  cpu_tracer.h  device_tracer.cc  device_tracer.h  device_tracer_manager.h  trace_handler.cc  trace_handler.h
client/cancellation/: cancellation_token.cc  cancellation_token.h
client/cmake/: test_setup.cmake
client/configuration/: config.cc  config.h  config_exception.h
client/dattocli/: dattocli  dattosrv
client/dattod/: dattod.cc  dattod_exception.h  flock.cc  flock.h
client/dattonet/: dattonet
client/dattoweb/: dattoweb
client/device_synchronizer/: device_synchronizer.cc  device_synchronizer.h  device_synchronizer_exception.h  device_synchronizer_interface.h
client/docs/: BUILDING.md  TESTING.md  USAGE.md
client/fs_parsing/: BUILDING.md  EXTFSPartition.cpp  Makefile  ext_error_table-inl.h  ext_error_table.h  ext_file_system.h  ext_mountable_block_device.cc  ext_mountable_block_device.h  test.cpp  xfs_mountable_block_device.cc  xfs_mountable_block_device.h
client/fs_parsing/libxfs/: logitem.c  xfs_dir2_block.c  xfs_dir2_data.c  xfs_ialloc.c
client/messages/: make_classes.sh  make_python.sh  pause_backup_request.proto  progress_backup_request.proto  reply.proto  request.proto  start_backup_reply.proto  start_backup_request.proto  status_backup_reply.proto  status_backup_request.proto  string_reply.proto
client/python_libs/: dattolib.py
client/rangetree/: Makefile  rangetree.c  rangetree.h
client/rangetree/copyBlocks/: copyblocks.c  copychanges.c
client/remote_block_device/: block_device_exception.h  nbd_block_device.cc  nbd_block_device.h  nbd_client.cc  nbd_client.h  nbd_exception.h  remote_block_device.cc  remote_block_device.h  remote_block_device_exception.h
client/request_listener/: ipc_request_listener.cc  ipc_request_listener.h  ipc_socket_reply_channel.cc  ipc_socket_reply_channel.h  protosocket.cc  protosocket.h  reply_channel.h  request_handler.cc  request_handler.h  socket_reply_channel.cc  socket_reply_channel.h  test_request_handler.cc  test_request_handler.h
client/request_listener/messages/: make_classes.sh  pause_backup_reply.proto  stop_backup_reply.proto
client/src/: block_device.cc  block_device.h  dm_snapshotable_block_device.cc  dm_snapshotable_block_device.h  freezable_block_device.cc  freezable_block_device.h  run_tests  run_tests.sh  snapshotable_block_device.h  trace_controller.h
client/src/backup/: backup.h
client/src/block_device/: block_device.cc  block_device.h  block_device_parser.h  dm_snapshotable_block_device.cc  dm_snapshotable_block_device.h  mountable_block_device.h  partition.h  snapshotable_block_device.h
client/src/block_trace/: NOTES.md  block_trace_exception.h  cpu_tracer.cc  cpu_tracer.h  device_trace.h  device_tracer.cc  device_tracer.h  device_tracer_manager.cc  device_tracer_manager.h  interval_queue.h  trace_controller.cc  trace_controller.h  trace_handler.cc  trace_handler.h
client/src/device_mapper/: dm_create_task.cc  dm_create_task.h  dm_info.h  dm_info_task.cc  dm_info_task.h  dm_reload_task.cc  dm_reload_task.h  dm_remove_task.cc  dm_task.h  (+10 more)
client/test/: backup_coordinator_test.cc  backup_event_tracker_test.cc  backup_manager_test.cc  backup_status_tracker_test.cc  backup_test.cc  block_device_factory_test.cc  block_device_test.cc  cleanup_test_loop_device  config_test.cc  dattocli_test.py  device_synchronizer_test.cc  device_tracer_test.cc  extfs_test.cc  flock_test.cc  ipc_request_listener_test.cc  loop_device.cc  loop_device.h  make_test_loop_device  mountable_block_device_test.cc  nbd_block_device_test.cc  unsynced_block_tracker_test.cc  unsynced_sector_manager_test.cc  unsynced_sector_store_test.cc  unsynced_sector_tracker_test.cc  xfs_test.cc
client/tests/: test_block_device.cc  tracetable-test.c
client/unsynced_sector_manager/: sector_interval.h  sector_set.h  unsynced_sector_manager.cc  unsynced_sector_manager.h  unsynced_sector_store.cc  unsynced_sector_store.h  unsynced_tracking_exception.h
client/unsynced_sector_tracker/: sector_interval.h  sector_set.h  unsynced_sector_tracker.cc  unsynced_sector_tracker.h
(+389 files in other folders)
